# GPU_ECC_SoCG2022

./: CMakeLists.txt  GPU_ECC_demo.ipynb  README.md  ctpl_stl.h  helper_cuda.h  kernel.cu  kernel.h  main.cpp  routines.cpp  routines.h  template.h  utility.cpp  utility.h
GaussRandomField/: 4.txt
releases/: gpuecc-0.1.0-cp312-cp312-linux_x86_64.whl
sources/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp  makefile  routines.cpp  routines.h  template.h  utility.cpp  utility.h
